# MuGenfier

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: report.aux  report.out  report.tex
models/: Conv1D.txt  embeddings.yaml  mfcc_model.h5
mugenfier/: __init__.py
mugenfier/datasets/: __init__.py  dataframe.py  gtzan.py  random_split.py
mugenfier/features/: __init__.py  conv1dfeat.py  create_mfcc_embdd.py  mfcc.py  wavelets_extraction.py
mugenfier/models/: __init__.py
mugenfier/utils/: __init__.py  split.py  wave.py
mugenfier/wrappers/: cnn_mfcc.py  dtcwt.py  dwt.py  main.py  model.py  vision_lang.py
notebooks/: Conv1D.ipynb  autoencoder.ipynb  cnn.ipynb  ensemble.ipynb  full wavelets experimentation.ipynb  main.py  mfcc_cnn.ipynb  reports_functions.py  test.py  wavelet_dtcwt.ipynb
src/: pyproject.toml
src/api/: main.py  requirements.txt
src/api/wrappers/: cnn_mfcc.py  dwt.py  main.py  model.py  siamese.py  utils.py  vision_lang.py
src/client/: index.html  package-lock.json
src/client/src/: App.tsx  index.css
src/client/src/components/: GenreClassifier.tsx
src/docker/api/: Dockerfile
src/model/: autoencoder.ipynb  cnn.ipynb  create_mfcc_embdd.py  get_transcription_and_embedding.py  new_model.py  preprocessing.ipynb  vision_lang.ipynb
src/model/features/: dtcwt_15_lvl17.npy
src/training/: Conv1D.ipynb  cnn.ipynb  preprocessing.ipynb  vision_lang.ipynb  wavelet_dtcwt.ipynb
src/web/: Dockerfile  package-lock.json  package.json
src/web/src/components/: GenreClassifier.tsx
