[tool.poetry]
name = "mugenfier"
version = "0.5.0"
description = "Music Genre Classifier"
authors = ["leandro-driguez <leandro_driguez@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
