[tool.poetry]
name = "mugenfier"
version = "0.1.0"
description = "Music Genre Classifier"
authors = ["leandro-driguez <leandro__rodriguez@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.1.0"
fastapi = "^0.95.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
